# nixbot

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  Readme.org  cabal.project  default.nix  module.nix  new-build-notes.txt  nixbot.cabal  options.nix  shell.nix  stack.yaml  stack2nix.nix  test2.nix
brainstorms/: sessions
nix/: default.nix  options.nix
nix-session/: ChangeLog.md  nix-session.cabal  options.nix
nix-session-types/: nix-session-types.cabal
nix-session-types/src/Nix/Session/: Types.hs
nix-session/app/: Main.hs
nix-session/nix/: options.nix
nix-session/src/Nix/: Session.hs
nix-session/src/Nix/Session/: CanAssign.hs  Config.hs  Input.hs
notes/: Readme.org  plugins
src/: #Main.hs#  .#Main.hs  Backends.hs  Config.hs  Git.hs  IRC.hs  Log.hs  Main.hs  NixEval.hs  Nixpkgs.hs  Plugins.hs  Test.hs  Types.hs  Utils.hs
src/Frontend/: AMQP.hs  Types.hs
src/Plugins/: Commands.hs  Hello.hs  Karma.hs  Leaked.hs  NixRepl.hs  Nixpkgs.hs  Pr.hs  Quit.hs  Reply.hs  Tell.hs  Unreg.hs
src/Plugins/Commands/: Dynamic.hs  Escape.hs  Expand.hs  Find.hs  Guys.hs  InclusiveLanguage.hs  Locate.hs  Permalink.hs  RandomPr.hs  Shared.hs  Tell.hs
src/Utils/: FileLiteral.hs
