name:                nixbot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Infinisil/nixbot#readme
license:             BSD3
license-file:        LICENSE
author:              Silvan Mosberger
maintainer:          infinisil@icloud.com
copyright:           2018 Silvan Mosberger
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-files:          nix/*.nix

executable nixbot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Config
                       Utils
                       Plugins
                       Plugins.Commands
                       Plugins.Reply
                       Plugins.Karma
                       Plugins.Nixpkgs
                       Plugins.Pr
                       Plugins.NixRepl
                       Plugins.Tell
                       Plugins.Unreg
                       NixEval
                       IRC
                       Paths_nixbot
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , amqp
                     , text
                     , stm
                     , containers
                     , strict
                     , github
                     , http-conduit
                     , regex-tdfa
                     , bytestring
                     , mtl
                     , edit-distance
                     , monad-logger
                     , directory
                     , filepath
                     , unordered-containers
                     , megaparsec
                     , process
                     , data-default
                     , file-embed
                     , versions
                     , either
                     , http-client
                     , http-types
                     , http-client-tls
                     , time
                     , optparse-applicative
                     , typed-process
