name:                nixbot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Infinisil/nixbot#readme
license:             BSD3
license-file:        LICENSE
author:              Silvan Mosberger
maintainer:          infinisil@icloud.com
copyright:           2018 Silvan Mosberger
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-files:          nix/*.nix

executable nixbot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       Config
                       Utils
                       Plugins
                       Log
                       Frontend.Types
                       Frontend.AMQP
                       Plugins.Commands
                       Plugins.Karma
                       Plugins.Commands.Find
                       Plugins.Commands.Tell
                       Plugins.Commands.Locate
                       Plugins.Commands.Dynamic
                       Plugins.Commands.Shared
                       Plugins.Pr
                       Plugins.Leaked
                       Plugins.NixRepl
                       Plugins.Unreg
                       Types
                       NixEval
                       IRC
                       Paths_nixbot
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , amqp
                     , text
                     , stm
                     , stm-chans
                     , async
                     , containers
                     , github
                     , regex-tdfa
                     , bytestring
                     , mtl
                     , edit-distance
                     , directory
                     , filepath
                     , unordered-containers
                     , megaparsec
                     , process
                     , http-client
                     , http-types
                     , http-client-tls
                     , time
                     , optparse-applicative
                     , typed-process
                     , unix
